istio/echo-app/echo-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echo-pod
  labels: 
    app: echo-pod
    version: v1
spec:
  containers:
    - name: echo-pod-container
      image: anvesh35/echo-pod-name:latest
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echo-svc
spec:
  type: ClusterIP
  selector:
    app: echo-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
